syntax = "proto3";
package service;
option go_package = ".;service";
import "options.proto";

service Sample {
    rpc Echo (EchoRequest) returns (EchoResponse){
        option (follower_ok) = true;
    };
    rpc EchoLeaderOnly (EchoRequest) returns (EchoResponse);
    rpc EchoTunnel (EchoRequest) returns (EchoResponse);
    rpc EchoDelay(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    int64 Int = 1;
    int64 Timestamp = 3;
    uint64 ReplicaSet = 4;
}

message EchoResponse {
    int64 Int = 1;
    string Responder = 2;
    int64 Timestamp = 4;
    int64 Delay = 5;
    string ServerID = 6;
}

message Message1 {
    int64 Param1 = 1;
    string Param2 = 2;
    Message2 M2 = 3;
    repeated Message2 M2S = 4;
}

message Message2 {
    fixed32 Param1 = 1;
    bytes P2 = 2;
    repeated int32 P3 = 3;
    Message1 M1 = 4;
}

